完成消息列表模板

--- a/src/less/common/tabbar.less
+++ b/src/less/common/tabbar.less
@@ -1,7 +1,7 @@
 @import "../variable.less";
 
 .mint-tabbar {
-  height: 50px;
+  height: @tabbar-height;
   background-color: #fff;
 
   .mint-tab-item {
