--- a/src/less/index.less
+++ b/src/less/index.less
@@ -4,10 +4,16 @@ body, html {
   height: 100%;
   width: 100%;
   overflow-x: hidden;
+  user-select: none;
+  -webkit-overflow-scrolling: touch;
 }
 
 a {
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+}
+
+p {
+  margin: 0;
 }
 
 #app {
@@ -16,4 +22,6 @@ a {
 
 .main {
   padding-top: @header-height;
+  padding-bottom: @tabbar-height;
+  overflow: scroll;
 }
