--- a/src/less/message/index.less
+++ b/src/less/message/index.less
@@ -4,11 +4,131 @@
   background-color: #fff;
   box-sizing: border-box;
   overflow: hidden;
+  display: flex;
+  align-items: center;
 
   .search-bar-inner {
-    height: 25px;
+    padding: 6px;
     border-radius: 4px;
     background-color: #eeeff3;
     display: flex;
+    flex: 1;
+    align-items: center;
+
+    .fa-icon {
+      color: #d1d0d5;
+    }
+
+    .search-input-box {
+      //appearance: none;
+      //border: 0;
+      //box-sizing: border-box;
+      //width: 100%;
+      //height: 100%;
+      //outline: 0;
+      color: #d1d0d5;
+      font-size: 13px;
+      box-sizing: border-box;
+      padding-left: 6px;
+    }
+  }
+}
+
+.msg-list {
+  overflow: hidden;
+
+  .msg-item {
+    position: relative;
+    width: 100%;
+    min-height: 67px;
+    padding-left: 75px;
+    box-sizing: border-box;
+    display: flex;
+
+    .msg-item-left {
+      position: absolute;
+      width: 50px;
+      height: 100%;
+      left: 11px;
+      display: flex;
+      align-items: center;
+      justify-content: flex-start;
+
+      .avatar {
+        display: inline-block;
+        width: 50px;
+        height: 50px;
+        border-radius: 100%;
+      }
+    }
+
+    .msg-item-content {
+      width: 100%;
+      padding: 13px 11px 13px 0;
+      box-sizing: border-box;
+
+      .top-row, .bottom-row {
+        display: flex;
+        flex-direction: row;
+        line-height: 21px;
+      }
+
+      .top-row {
+
+        .target-name {
+          font-size: 16px;
+          color: #000;
+          font-weight: 400;
+          align-items: flex-start;
+          flex: 1;
+          overflow: hidden;
+          text-overflow: ellipsis;
+          white-space: nowrap;
+        }
+
+        .msg-time {
+          font-size: 12px;
+          color: #909091;
+        }
+      }
+
+      .bottom-row {
+
+        .msg-content {
+          font-size: 15px;
+          color: #909091;
+          align-items: flex-start;
+          flex: 1;
+          overflow: hidden;
+          text-overflow: ellipsis;
+          white-space: nowrap;
+        }
+
+        .unread-count {
+          min-width: 20px;
+          height: 20px;
+          //padding: 4px 6px;
+          font-size: 12px;
+          font-weight: 500;
+          color: #fff;
+          background-color: #a4d5ed;
+          border-radius: 100%;
+          text-align: center;
+        }
+      }
+
+      &:after{
+        content: " ";
+        position: absolute;
+        bottom: 0;
+        right: 0;
+        height: 1px;
+        border-top: 1px solid #dedfe0;
+        color: #dedfe0;
+        transform-origin: 0 0;
+        transform: scaleY(.5);
+        left: 75px;
+      }
+    }
   }
 }
