--- a/src/less/common/tabbar.less
+++ b/src/less/common/tabbar.less
@@ -6,7 +6,7 @@
 
   .mint-tab-item {
     &.is-selected {
-      background-color: transparent;
+      background-color: transparent !important;
 
       .mint-tab-item-icon, .mint-tab-item-label {
         color: @tabbar-font-color-active;
