--- a/src/less/contact/index.less
+++ b/src/less/contact/index.less
@@ -11,9 +11,9 @@
     }
 
     &.is-selected {
-      border-bottom: 3px solid #54b4ef;
-      color: #54b4ef;
-      margin-bottom: 0;
+      border-bottom: 3px solid #54b4ef !important;
+      color: #54b4ef !important;
+      margin-bottom: 0 !important;
     }
   }
 }
